JumpScript/tests/baselines/reference/voidAsNonAmbiguousReturnType.errors.txt
tests/cases/compiler/voidAsNonAmbiguousReturnType_0.jump(1,17): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/compiler/voidAsNonAmbiguousReturnType_1.jump (0 errors) ====
    ///<reference path='voidAsNonAmbiguousReturnType_0.jump'/>
    import fs = require("./voidAsNonAmbiguousReturnType_0");
    
    function main() {
     fs.mkdirSync('test'); // should not error - return types are the same
    }
    
==== tests/cases/compiler/voidAsNonAmbiguousReturnType_0.jump (1 errors) ====
    export function mkdirSync(path: string, mode?: number): void;
                    ~~~~~~~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    export function mkdirSync(path: string, mode?: string): void {}
    